# armake2

./: .dockerignore  Cargo.toml  Dockerfile  build.sh
src/: binarize.rs  config.rs  error.rs  pbo.rs  preprocess.rs  run.rs  sign.rs
