[package]
name = "armake2"
version = "0.3.0"
description = "Arma 3 modding tools"
license = "GPL-2.0-or-later"
categories = ["command-line-utilities"]
authors = ["KoffeinFlummi <koffeinflummi@protonmail.com>"]
homepage = "https://github.com/KoffeinFlummi/armake2"
repository = "https://github.com/KoffeinFlummi/armake2"
readme = "README.md"
edition = "2021"

[lib]
name = "armake2"

[[bench]]
name = "preprocess"
harness = false

[[bench]]
name = "config"
harness = false

[dependencies]
colored = "2"
byteorder = "1"
docopt = "1"
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10.64"
linked-hash-map = "0.5"
regex = "1"
once_cell = "1.17"
peg = "0.8.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
